force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Batch_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Batch_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Batch Management : Field to get the batch available in the inventory</description>
    <label>Batch Lookup</label>
    <referenceTo>SVMXC__Product_Serial__c</referenceTo>
    <relationshipLabel>Work Details (Batch Lookup)</relationshipLabel>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>