force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>Stores the Batch number which will used in Integration operations.</description>
    <label>Batch Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>