force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/CheckIsBillable__c.field-meta.xml
<CustomField>
    <fullName>CheckIsBillable__c</fullName>
    <description>This field is created  for check  Is billable is true  and use this field in SFM validation rule</description>
    <formula>IF(SVMXC__Is_Billable__c ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckIsBillable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>