force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Consumed_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Part_Number__c</fullName>
    <description>To Populate the Productcode of the associated Product Stock. 
Automatically Populated if Product Stock is associated to the Work Detail.</description>
    <formula>SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed Part Number</label>
    <type>Text</type>
</CustomField>