force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Consumed_Product_Stock_Pro_Description__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Product_Stock_Pro_Description__c</fullName>
    <description>To Populate the Product Description of the associated Product Stock. 
Automatically Populated if Product Stock is associated to the Work Detail.</description>
    <formula>SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed Product Stock Pro Description</label>
    <type>Text</type>
</CustomField>