force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Consumption_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to initiate the &quot;RMA process&quot; on Work Orders.</description>
    <label>Consumption Confirmed</label>
    <type>Checkbox</type>
</CustomField>