force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Consumption_Confirmed_User__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Confirmed_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-37399 - Field to store the logged in user who checked &quot;Consumption Confirmed&quot; checkbox.</description>
    <label>Consumption Confirmed User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>