force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Duration_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_hours__c</fullName>
    <description>DCP-673 : Field to capture the duration for labor and travel activity. 
To be entered manually by the user in the SFM transaction &apos; WO Debrief&apos;</description>
    <label>Duration (in hours)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>