force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Field_Replaceable_Unit_Product__c.field-meta.xml
<CustomField>
    <fullName>Field_Replaceable_Unit_Product__c</fullName>
    <businessOwnerUser>afornadel@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually populated field to select the FRU List Product on the Estimate Work Detail.</description>
    <inlineHelpText>Field used to store the reference value for FRU List object.</inlineHelpText>
    <label>Field Replaceable Unit Product</label>
    <referenceTo>FRU_List__c</referenceTo>
    <relationshipLabel>Work Details</relationshipLabel>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>