force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Include_in_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Service_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <description>DCP-673 
To be used in WO debrief SFM transaction, to identify which activities should be shown in service report.</description>
    <label>Include in Service Report</label>
    <type>Checkbox</type>
</CustomField>