force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Indirect_Confirmation_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Confirmation_ERP_ID__c</fullName>
    <description>To store Indirect confirmation ERP Id from SAP.</description>
    <label>Indirect Confirmation ERP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>