force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>To Populate Integration Status as &quot;Success&quot; or &quot;Error&quot;</description>
    <label>Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>