force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Is_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify system created work details.</description>
    <label>Is Auto Created</label>
    <type>Checkbox</type>
</CustomField>