force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Is_Part_Order_Line_for_Spare_Parts__c.field-meta.xml
<CustomField>
    <fullName>Is_Part_Order_Line_for_Spare_Parts__c</fullName>
    <description>Checkbox to check whether the order line is of Spare Parts.</description>
    <defaultValue>false</defaultValue>
    <label>Is Part Order Line for Spare Parts</label>
    <type>Checkbox</type>
</CustomField>