force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours__c</fullName>
    <description>To capture the time spent by field service engineer  on labor activity
Will be entered manually by the  field service engineer
DCP-25287: Field label updated from Labor Hours to Labor Hours (HH:MM)</description>
    <label>Labor Hours (HH:MM)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>