force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Legacy_SFDC_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_Record_ID__c</fullName>
    <description>Legacy record id for work detail lines mapped in from tasks in illuminalegacy</description>
    <externalId>true</externalId>
    <label>Legacy SFDC Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>