force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Non_Billable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Reason__c</fullName>
    <description>US-1114
To track the reason for converting Work Detail to Non Billable</description>
    <label>Non Billable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumable Warranty</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Spare Part Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>