force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <businessOwnerUser>cerickson@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the parent Work Order&apos;s Owner&apos;s Manager user id, used in Work Detail Goodwill Approval Process</description>
    <label>Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>