force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Purchase Order Number to uniquely identify the purchase order from external systems. This is auto populated.</description>
    <label>PO Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>