force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Product_Code1__c.field-meta.xml
<CustomField>
    <fullName>Product_Code1__c</fullName>
    <description>To populate the product code in debrief work order transaction from product stock</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>