force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Product_Description1__c.field-meta.xml
<CustomField>
    <fullName>Product_Description1__c</fullName>
    <description>Formula field that shows Product Description from the Product on Work Detail</description>
    <formula>SVMXC__Product__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>