force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <description>To capture the serial number of the associated product stock</description>
    <formula>SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Product__r.Serial_Number_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Serial Number</label>
    <type>Text</type>
</CustomField>