force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/RMA_Required__c.field-meta.xml
<CustomField>
    <fullName>RMA_Required__c</fullName>
    <description>RMA required is derived based on product.</description>
    <formula>SVMXC__Product__r.RMA_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Required</label>
    <type>Checkbox</type>
</CustomField>