force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Start_Date_and_Time_in_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_and_Time_in_MM_DD_YYYY__c</fullName>
    <description>Start_Date in MM/DD/YYYY format to show up in Service Report.</description>
    <formula>IF(ISBLANK(SVMXC__Start_Date_and_Time__c) ,&apos;&apos;,
TEXT(MONTH(DATEVALUE(SVMXC__Start_Date_and_Time__c)))+&apos;/&apos;+ TEXT(DAY(DATEVALUE(SVMXC__Start_Date_and_Time__c)))+&apos;/&apos;+ TEXT(YEAR(DATEVALUE(SVMXC__Start_Date_and_Time__c)))
)</formula>
    <label>Start Date and Time in MM/DD/YYYY</label>
    <type>Text</type>
</CustomField>