force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Consumed_Part_Code__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Consumed_Part_Code__c</fullName>
    <description>The field indicates the Serial Number in Text form. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Stock Serial&quot; need to be populated in case if product is Serialized in order to get proper data.</description>
    <inlineHelpText>The field indicates the Serial Number in Text form. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Stock Serial&quot; need to be populated in case if product is Serialized in order to get prop</inlineHelpText>
    <label>Consumed Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>