force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Consumed_Product_Stock__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Consumed_Product_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field indicates the product stock consumed. It is necessary to provide a reference of Stock Serial or a Serial number in case the product is Serialized for proper consumption</description>
    <inlineHelpText>This field indicates the product stock consumed. It is necessary to provide a reference of Stock Serial or a Serial number in case the product is Serialized for proper consumption</inlineHelpText>
    <label>Consumed Product Stock</label>
    <referenceTo>SVMXC__Product_Stock__c</referenceTo>
    <relationshipLabel>Work Details (Consumed Product Stock)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Consumed_Product_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>