force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Consumed_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Consumed_Status__c</fullName>
    <description>The status of the Part In process</description>
    <inlineHelpText>The status of the Part In process</inlineHelpText>
    <label>Consumed Status</label>
    <type>TextArea</type>
</CustomField>