force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Consumed_Stocked_Serial__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Consumed_Stocked_Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field indicates reference to Stock Serial. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Serial Number&quot; need to be populated in case if product is Serialized in order to get data.</description>
    <inlineHelpText>The field indicates reference to Stock Serial. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Serial Number&quot; need to be populated in case if product is Serialized in order to get data.</inlineHelpText>
    <label>Consumed Stock Serial</label>
    <referenceTo>SVMXC__Product_Serial__c</referenceTo>
    <relationshipLabel>Work Details (Consumed Stock Serial)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Consumed_Stocked_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>