force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Is_Part_Out__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Is_Part_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that there is a part out and van stock code needs to process part out process</description>
    <inlineHelpText>This field indicates that there is a part out and van stock code needs to process part out process</inlineHelpText>
    <label>Is Part Out</label>
    <type>Checkbox</type>
</CustomField>