force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Part_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Part_Out_Status__c</fullName>
    <description>The status of the Part out process</description>
    <inlineHelpText>The status of the Part out process</inlineHelpText>
    <label>Part Out Status</label>
    <type>TextArea</type>
</CustomField>