force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Return_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Return_Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Installed Product which is removed as a part of Part Out Process</description>
    <inlineHelpText>Installed Product which is removed as a part of Part Out Process</inlineHelpText>
    <label>Return Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Work Details (Return Installed Product)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Return_Installed_Product</relationshipName>
    <type>Lookup</type>
</CustomField>