force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Return_Part__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Return_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of Product which is removed as a part of Part Out Process. If Serialized, provide &quot;Return Serial Number&quot;. This will be used in Part Out Process to locate the Installed Product to be removed. Populate &quot;Return Installed Product&quot; or this field.</description>
    <inlineHelpText>Reference of Product which is removed as a part of Part Out Process. If Serialized, provide &quot;Return Serial Number&quot;. This will be used in Part Out Process to locate the Installed Product to be removed. Populate &quot;Return Installed Product&quot; or this field.</inlineHelpText>
    <label>Return Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Details (Return Part)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Return_Part</relationshipName>
    <type>Lookup</type>
</CustomField>