force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Return_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Return_Serial_Number__c</fullName>
    <description>This field needs to be populated in case if the &quot;Return Part&quot; is &quot;Serialized&quot;. Using info from &quot;Return Part&quot; and this Serial Number, Installed Product will be found which will be then used for Part Out Process</description>
    <inlineHelpText>This field needs to be populated in case if the &quot;Return Part&quot; is &quot;Serialized&quot;. Using info from &quot;Return Part&quot; and this Serial Number, Installed Product will be found which will be then used for Part Out Process</inlineHelpText>
    <label>Return Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>