force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMX_PS_VS_Returned_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Returned_Qty__c</fullName>
    <description>This field indicates the qty of Non-Serialized Products returned while Part Out Process. This field is necessary to populated in case the product is Non-Serialized</description>
    <inlineHelpText>This field indicates the qty of Non-Serialized Products returned while Part Out Process. This field is necessary to populated in case the product is Non-Serialized</inlineHelpText>
    <label>Returned Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>