force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Activity_Type__c</fullName>
    <description>Indicates the type of activity performed. Usually applicable for labor line types.</description>
    <inlineHelpText>Indicates the type of activity performed. Usually applicable for labor line types.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Order_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Customer Readiness</fullName>
            </value>
            <value>
                <fullName>Customer Service Review</fullName>
            </value>
            <value>
                <fullName>Dedicated Onsite Activities</fullName>
            </value>
            <value>
                <fullName>De-Installation</fullName>
            </value>
            <value>
                <fullName>Depot Service</fullName>
            </value>
            <value>
                <fullName>Field Compliance Review</fullName>
            </value>
            <value>
                <fullName>Illumina Review</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>IQ/OQ</fullName>
            </value>
            <value>
                <fullName>IT Consult</fullName>
            </value>
            <value>
                <fullName>Letter of Acceptance accepted</fullName>
            </value>
            <value>
                <fullName>OQ</fullName>
            </value>
            <value>
                <fullName>PQ</fullName>
            </value>
            <value>
                <fullName>PQ Training</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Qualification Service Review</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
            <value>
                <fullName>Repair/Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Sales Support Activity</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>System Health Check</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>