force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Actual_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Actual_Quantity2__c</fullName>
    <description>Number of units consumed. This is context-sensitive based on line type.</description>
    <inlineHelpText>Number of units consumed. This is context-sensitive based on line type.</inlineHelpText>
    <label>Line Qty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>