force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Billable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Billable_Quantity__c</fullName>
    <description>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
    <inlineHelpText>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
    <label>Billable Qty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>