force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Canceled_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Canceled_On__c</fullName>
    <description>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</description>
    <inlineHelpText>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</inlineHelpText>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>