force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Closed_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Closed_On__c</fullName>
    <description>Date/time when this service order line was closed. This is set automatically when parts are received.</description>
    <inlineHelpText>Date/time when this service order line was closed. This is set automatically when parts are received.</inlineHelpText>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>