force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Cost_Category__c</fullName>
    <description>Type of costing applied to calculate the actual line price</description>
    <inlineHelpText>Type of costing applied to calculate the actual line price</inlineHelpText>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Double Time</fullName>
            </value>
            <value>
                <fullName>Time and a half</fullName>
            </value>
            <value>
                <fullName>After Hours</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>