force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__End_Date_and_Time__c</fullName>
    <description>End date and time if the line type is Labor</description>
    <inlineHelpText>End date and time if the line type is Labor</inlineHelpText>
    <label>End Date and Time</label>
    <type>DateTime</type>
</CustomField>