force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Entitlement_Notes__c</fullName>
    <label>Entitlement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>