force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Estimated_Price2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Estimated_Price2__c</fullName>
    <description>Total estimated price for this parts/labor/expense line</description>
    <inlineHelpText>Total estimated price for this parts/labor/expense line</inlineHelpText>
    <label>Estimated Price Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>