force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__From_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__From_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Location for which parts are requested</description>
    <inlineHelpText>From Location</inlineHelpText>
    <label>From Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipName>Service_Order_Line_From_Loc</relationshipName>
    <type>Lookup</type>
</CustomField>