force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Group_Member__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</description>
    <inlineHelpText>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</inlineHelpText>
    <label>Technician/Equipment</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipName>Service_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>