force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Line_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Status__c</fullName>
    <description>Service Order Line Status.</description>
    <inlineHelpText>Service Order Line Status.</inlineHelpText>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reversal Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting WO Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>