force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Line_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Type__c</fullName>
    <description>Indicates the type of usage: Parts, Labor or Expenses</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Material Consumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>